Add create offer endpoint
